@@ -3,6 +3,7 @@ README
 LICENSE
 ChangeLog
 Makefile
+configure
 CoverageItem.cs
 NamespaceCoverageItem.cs
 ClassCoverageItem.cs
@@ -14,18 +15,12 @@ HtmlExporter.cs
 MonoCovMain.cs
 style.xsl
 trans.gif
-gui/qt/MonoCov.cs
-gui/qt/CoverageView.cs
-gui/qt/SourceWindow.cs
-gui/qt/FilterDialog.cs
-gui/qt/filterdialog.ui
 gui/gtk/MonoCov.cs
 gui/gtk/CoverageView.cs
+gui/gtk/SourceWindow.cs
 gui/gtk/monocov.glade
+gui/gtk/monocov.gladep
 test.cs
 symbols.cs
 nunit-console.cs
 coverage.c
-Qt-monocov.dll
-qtsharp.diff
-corlib-tests.cov
